--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -27,7 +27,7 @@
 }
 .navbarLogo {
     padding-top: 4px;
-    padding-right: 9px;
+    padding-right: 8px;
    // background-color: rgba(255, 0, 0, 0.108);
 }
 .navbarLogoText {
@@ -38,14 +38,15 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    padding-bottom: 0px;
+    padding-bottom: 1px;
 }
 .navbarContentWrapper {
     display: flex;
     align-self: center;
     gap:4.5rem;
 
-    margin-left: 15rem;
+    margin-left: auto;
+    margin-right: 6.75rem;
     padding-top: .875rem;
   //  background-color: red;
 }
@@ -64,25 +65,32 @@
 
     gap:1.25rem;
     padding-top: .625rem;
-    padding-right: .5rem;
+    padding-right: 2rem;
 }
 .signinButton {
     border-radius: 33px;
-    width: 9.5rem;
+    min-width: 11.75rem;
     height: 3rem;
     gap:.75rem;
     flex-shrink: 0;
     display: flex;
+    padding-left: .25rem;
     padding-right: .5rem;
     justify-content: center;
     align-items: center;
-    background: #434E3E;
-    color: #FAF3D6;
+  //  background: #434E3E;
+    filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.25));
+  //  color: #FAF3D6;
+    padding-bottom: 1px;
     font-family: Helvetica Neue;
-    font-size: 19px;
-    font-style: normal;
+    font-size: 18.5px;
+    letter-spacing: .25px;
     font-weight: 500;
     line-height: normal;
+
+    border: 4px solid #ECCAB1;
+    background: #E3A77C;
+    color:#000;
 }
 .loginButton {
     border-radius: 33px;
@@ -92,7 +100,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border:1px solid #ddd;
+    border:.5px solid #ddd;
     color: #FAF3D6;
     font-family: Helvetica Neue;
     font-size: 19px;
