--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -15,7 +15,8 @@
  // background-color: rgba(255, 0, 0, 0.123);
   width: 100%;
   display: flex;
-  height: 39rem;
+//  height: 39rem;
+  height: 80.125vh;
   padding-top: 2.125rem;
 }
 .contentContainerHero {
@@ -247,10 +248,13 @@
  // padding-left: 3rem;
 }
 .subsectionContainerLeft {
-  width: 55%;
+  max-width: 55vw;
+  min-width: 50vw;
   padding-top: 2.125rem;
-  padding-left: 6rem;
+  padding-left: 6.625vw;
+ // padding-left: 6rem;
   display: flex;
+ // background-color: red;
 
   flex-direction: column;
   gap:1.125rem;
@@ -271,26 +275,27 @@
 
 
 .subsectionContainerRight {
-  width: 45%;
+  width: 50%;
  // padding-top: 2.25rem;
 //  padding-right: 1rem;
  // padding-top: 4.5rem;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  padding-left: 2.25rem;
+//  padding-left: 2.25rem;
+  padding-right: 3.5rem;
   padding-bottom: 1rem;
 
 }
 .subsectionSeperator {
   height:2px;
   align-self: center;
-  margin-bottom: .925rem;
 
-  width: 12%;
-  transform: translateX(.5rem);
+  max-width: 15%;
+  min-width: 10.5%;
+  transform: translateX(-1.25rem) translateY(-.55rem);
   
-  position: relative;
+  position: absolute;
   background-color: #FAF3D6;
 //  transform: translateX(100%);
 }
@@ -315,7 +320,7 @@
   font-style: normal;
   font-weight: 300;
   line-height: 121%; /* 42.273px */
-  letter-spacing: -.325px;
+  letter-spacing: -.3px;
   display: inline;
 
 
