--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -186,9 +186,11 @@
 .seperatorSubWrapper {
   position: relative;
   top:-1.124rem;
+  z-index: 1;
 }
 .seperator {
   position:absolute;
+
 }
 .subSeperator {
   position: absolute;
@@ -268,6 +270,7 @@
 }
 .seperatorWrapper {
   position: relative;
+  z-index: 1;
   &:nth-of-type(1) {
     top:-1rem;
   }
@@ -328,6 +331,19 @@
   letter-spacing: -.3px;
   display: inline;
 }
+.subsectionSubtextAlt {
+  color: #FAF3D6;
+  font-family: Helvetica Neue;
+  white-space: nowrap;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 122%; /* 42.273px */
+  letter-spacing: -.3px;
+  display: inline;
+  transform: scaleY(.98);
+
+}
 .subtext {
   color: #FAF3D6;
   font-family: Helvetica Neue;
@@ -337,7 +353,6 @@
   font-weight: 300;
   line-height: 122%; /* 42.273px */
   letter-spacing: -.3px;
-
   display: inline;
 }
 .placeholderText {
@@ -375,12 +390,12 @@
   align-items: center;
   justify-content: center;
   &:nth-of-type(1) {
-    border-right: 1px dashed #0b0b0b;
+  //  border-right: 1px dashed #0b0b0b;
     width: 33%;
   }
   &:nth-of-type(2) {
     width: 34%;
-    border-right: 1px dashed #0b0b0b;
+   // border-right: 1px dashed #0b0b0b;
   }
   &:nth-of-type(3) {
 
@@ -443,7 +458,7 @@
 
 
 .applyWrapperRight {
- // background-color: rgba(255, 0, 0, 0.161);
+ //background-color: rgba(255, 0, 0, 0.161);
   width: 42%;
   padding-right: 3.25%;
   padding-bottom: 5.25%;
@@ -497,8 +512,8 @@
   text-transform: capitalize;
 }
 .applyVideoContainer {
-  width: 488px;
-  height: 504px;
+  width: 33.88vw;
+  height: 64.7vh;
   border: 0.75px solid #FAF3D6;
   display: flex;
   align-items: center;
@@ -518,13 +533,16 @@
   text-transform: uppercase;
 }
 .propositionTopContainer {
-  background: linear-gradient(180deg, rgba(158, 186, 158, 0.29) 0%, rgba(248, 199, 25, 0.00) 100%);
+  background-image: linear-gradient(180deg,#7c8874 ,rgb(104, 110, 80) 40%, #303c30);
+ // background: linear-gradient(180deg, rgba(158, 186, 158, 0.29) 0%, rgba(248, 199, 25, 0.00) 100%);
   height: 100vh;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #6A7055;
+  flex-direction: column;
+ // align-items: center;
+ // justify-content: center;
+ z-index: 0;
+  //background-color: #6A7055;
 }
 .propositionMidContainer {
   height: 140vh;
@@ -532,7 +550,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #303C30;
+  //background-color: rgba(87, 109, 87, 00);
 }
 .propositionBottomContainer {
   height: 120vh;
