--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -342,7 +342,6 @@
   letter-spacing: -.3px;
   display: inline;
   transform: scaleY(.98);
-
 }
 .subtext {
   color: #FAF3D6;
@@ -545,11 +544,13 @@
   //background-color: #6A7055;
 }
 .propositionMidContainer {
-  height: 140vh;
+  height: 138.5vh;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  //align-items: center;
+ // background-color: rgba(255, 0, 0, 0.289);
+  //justify-content: center;
   //background-color: rgba(87, 109, 87, 00);
 }
 .propositionBottomContainer {
@@ -558,7 +559,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #686f4f;
+  background-color: #303C30;
+  background-image:linear-gradient(180deg, rgba(149, 185, 149, 0.29), rgba(248, 199, 25, 0));
 }
 .testimonialContainer {
   height: 90vh;
