--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -175,3 +175,140 @@
     height: 70vh;
      background-image: url('../public/assets/wave.svg');
 }
+
+
+.midWrapper {
+    width:100%;
+    margin-top:2.75rem;
+    height: 62.77vh;
+    display: flex;
+   // background-color: rgba(128, 0, 128, 0.8);
+}
+.midWrapperLeft {
+    width: 60.125vw;
+    height: 100%;
+    display: flex;
+    z-index: 1;
+    outline:1px dashed #FAF3D6;
+   // background-color: #252525;
+}
+.midImageLeft {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.midImageRight {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 1px dashed #FAF3D6;
+}
+.midWrapperRight {
+    width: 39.75vw;
+    padding-left: .25vw;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  //  background-color: rgba(0, 0, 255, 0.2);
+}
+.midWrapperContext {
+    //width: 30.625vw;
+    width: 30.2vw;
+   height: 42.6vh; // chnage this to center
+    padding-top:1.1rem;
+    padding-right: .125rem;
+    display: flex;
+    flex-direction: column;
+  //  background-color: rgba(0, 106, 255, 0.2);
+    align-items: flex-end;
+}
+.propositionMidIcon {
+    width: 37.5px;
+    height: 37.5px;
+    flex-shrink: 0;
+    border-radius: 12.5px;
+    border: 4px solid #FDFFFC;
+    background: #D7F9B7;
+    color: #252525;
+    z-index: 1;
+    font-family: Helvetica Neue;
+    font-size: 15.5px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 122%; /* 19.026px */
+    letter-spacing: -0.468px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left:2px;
+}
+.midIconText {
+    color: #D7F9B7;
+
+    font-family: Helvetica Neue;
+    font-size: 18.75px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 122%; /* 22.871px */
+    z-index: 1;
+    letter-spacing: -0.562px;
+    text-transform: uppercase;
+}
+.midTitleContainer {
+    display:"flex";
+    text-align:right;
+    padding-top: 1.425rem;
+    align-items: flex-end;
+    transform: translateX(.375rem);
+}   
+.midTitleText {
+    color: #FAF3D6;
+    display: inline;
+    text-align: right;
+    font-family: Helvetica Neue;
+    font-size: 45.75px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 121.98%; /* 55.806px */
+    letter-spacing: -1.372px;
+}
+.midRightContext {
+    text-align: right;
+    width: 100%;
+    display: inline;
+    transform: translateX(.25rem);
+  //  padding-top:4.375rem;
+  //background-color: red;
+ //   padding-left: 2px;
+   // transform: rotate(0.5deg);
+}
+.midWrapperCarousel {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 51.5vh;
+    margin-top: 6.258vh;
+    background-color: #252525;
+}
+.midCarouselImage {
+
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:nth-of-type(1) {
+        width: 33%;
+    }
+    &:nth-of-type(2) {
+        width: 34%;
+    }
+    &:nth-of-type(3) {
+        width: 33%;
+    }
+}
