--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -727,16 +727,25 @@
 .pricingContainer {
   height: 175.51vh;
   width: 100%;
-  
+
   display: flex;
   flex-direction: column;
   //align-items: flex-end;
   //justify-content: flex-end;
-  background-color: #1b1b1b;
+  background: linear-gradient(180deg, rgba(27, 27, 27, 0.91) 29.66%, rgba(0, 0, 0, 0.05) 132.71%);
+ //background-color: #1b1b1b;
   //background-repeat: no-repeat;
   //background-position:  100%;
   //background-size: contain;
   //background-image: url('../public/assets/waves2.svg');
+}
+.membershipContainer {
+ height: 153.40vh;
+ width: 100%; 
+ flex-direction: column;
+ display: flex;
+// background-color: red;
+ background: linear-gradient(360deg, rgba(27, 27, 27, 0.91) 29.66%, rgba(0, 0, 0, 0.05) 132.71%);
 }
 .faqsContainer {
   height: 100vh;
@@ -744,7 +753,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #1b1b1b;
+ // background-color: #1b1b1b;
+  background: linear-gradient(180deg, rgba(27, 27, 27, 0.91) 29.66%, rgba(0, 0, 0, 0.05) 132.71%);
 
 }
 .pricingForeground {
@@ -773,13 +783,91 @@
   justify-content: center;
   align-self: flex-end;
   
-  background-color: #1b1b1b;
+  //background-color: #1b1b1b;
   background-repeat: no-repeat;
 
   background-position: bottom;
   background-size: contain;
   background-image: url('../public/assets/waves2.svg');
 }
+
+
+// memberships
+
+.membershipHeaderContainer {
+  width: 100%;
+  display: flex;
+  padding-left: 1.125rem;
+  align-items: center;
+  justify-content: center;
+  color: #FAF3D6;
+  font-family: "Helvetica Neue";
+  font-size: 48.25px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 122%; /* 59.465px */
+  letter-spacing: -1px;
+  padding-top: 2.125rem;
+}
+.membershipCardContainer {
+  margin-top: 7.5vh;
+  width: 84.948vw;
+  height: 136vh;
+  gap:17.52vh;
+  display: flex;
+  flex-direction: column;
+  padding-left: .875rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.membershipCardRow {
+  width: 84.948vw;
+  height: 58.15vh;
+  display: flex;
+  gap:3.28vw;
+}
+.membershipCardWrapper {
+  width: 27.60vw;
+  height: 58.15vh;
+}
+.membershipCardImage {
+  width: 25.46vw;
+  height: 38.5vh;
+  border-radius: 37.5px;
+  background-color: #1b1b1b;
+  border: 1px dashed #7c8874;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.membershipCardContext {
+  padding-top: 1.625rem;
+}
+.membershipCardTitle {
+  color: #FAF3D6;
+
+  text-align: center;
+  font-family: "Helvetica Neue";
+  font-size: 22.5px;
+  font-style: normal;
+  font-weight: 700;
+  text-align: center;
+  line-height: normal;
+}
+.membershipCardSubtext {
+  color: #FAF3D6;
+  text-align: center;
+ // white-space: nowrap;
+  text-align: center;
+  font-family: "Helvetica";
+//  display: inline;
+  font-size: 22.25px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 27px;
+  padding-top: 1.325rem;
+}
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
