--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -833,8 +833,8 @@ padding-bottom: 5rem;
   height: 100%;
   transform: translateX(6.45vw);
  // margin-left: auto;
- 
-  background-color: #FAF3D6;
+  border: 1px solid #FAF3D6;
+  background-color: #252525;
 }
 .pricingForeground {
   width: 119.635vw;
