--- a/styles/navbar.module.scss
+++ b/styles/navbar.module.scss
@@ -58,7 +58,11 @@
     font-weight: 400;
     letter-spacing: .5px;
     line-height: normal;
-
+    transition: all .2s linear;
+}
+.navbarContent:hover {
+  //  color:#f59c5d;
+    transform: translateY(-.25rem);
 }
 .navbarButtonContainer {
     display: flex;
@@ -87,11 +91,17 @@
     letter-spacing: .25px;
     font-weight: 500;
     line-height: normal;
+    transition: all .2s linear;
 
     border: 4px solid #ECCAB1;
     background: #E3A77C;
     color:#000;
 }
+
+.signinButton:hover {
+    transform: scale(1.05);
+}
+
 .loginButton {
     border-radius: 33px;
     width: 9.125rem;
@@ -100,6 +110,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
     border:.5px solid #ddd;
     color: #FAF3D6;
     font-family: Helvetica Neue;
@@ -107,4 +118,10 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    transition: all .2s linear;
+}
+.loginButton:hover {
+  //  filter: invert(1);
+    background-color: #FAF3D6;
+    color:#0a0a0a;
 }
